load("@rules_java//java:defs.bzl", "java_library", "java_plugin")
load("@rules_pkg//:mappings.bzl", "pkg_files")
load("@rules_pkg//pkg:zip.bzl", "pkg_zip")
load("//shared/bazel/rules:java_rules.bzl", "wpilib_java_junit5_test")
load("//shared/bazel/rules:packaging.bzl", "zip_java_srcs")

java_library(
    name = "processor-java",
    srcs = glob(["src/main/java/**/*.java"]),
    resource_strip_prefix = "epilogue-processor/src/main/resources/",
    resources = glob(["src/main/resources/**"]),
    visibility = ["//visibility:public"],
    runtime_deps = [
        "//wpilibNewCommands:wpilibNewCommands-java",
    ],
    deps = [
        "//epilogue-runtime:epilogue-java",
    ],
)

pkg_files(
    name = "resources",
    srcs = glob(["src/main/resources/**"]),
    strip_prefix = "src/main/resources/",
)

zip_java_srcs(name = "epilogue-processor", extra_pkgs = [":resources"])

java_plugin(
    name = "plugin",
    processor_class = "edu.wpi.first.epilogue.processor.AnnotationProcessor",
    visibility = ["//visibility:public"],
    deps = [
        ":processor-java",
    ],
)

wpilib_java_junit5_test(
    name = "processor-test",
    srcs = glob(["src/test/java/**/*.java"]),
    plugins = [
        ":plugin",
    ],
    deps = [
        ":processor-java",
        "@maven//:com_google_testing_compile_compile_testing",
    ],
)
