load("@rules_java//java:defs.bzl", "java_plugin")
load("@rules_pkg//:mappings.bzl", "pkg_files")
load("//shared/bazel/rules:java_rules.bzl", "wpilib_java_junit5_test", "wpilib_java_library")

wpilib_java_library(
    name = "processor-java",
    srcs = glob(["src/main/java/**/*.java"]),
    extra_source_pkgs = ["resources"],
    maven_artifact_name = "epilogue-processor-java",
    maven_group_id = "edu.wpi.first.epilogue",
    resource_strip_prefix = "epilogue-processor/src/main/resources/",
    resources = glob(["src/main/resources/**"]),
    visibility = ["//visibility:public"],
    runtime_deps = [
        "//commandsv2:commandsv2-java",
    ],
    deps = [
        "//epilogue-runtime:epilogue-java",
    ],
)

pkg_files(
    name = "resources",
    srcs = glob(["src/main/resources/**"]),
    strip_prefix = "src/main/resources/",
)

java_plugin(
    name = "plugin",
    processor_class = "edu.wpi.first.epilogue.processor.AnnotationProcessor",
    visibility = ["//visibility:public"],
    deps = [
        ":processor-java",
    ],
)

wpilib_java_junit5_test(
    name = "processor-test",
    srcs = glob(["src/test/java/**/*.java"]),
    plugins = [
        ":plugin",
    ],
    deps = [
        ":processor-java",
        "@maven//:com_google_testing_compile_compile_testing",
    ],
)
