load("//shared/bazel/rules:java_rules.bzl", "wpilib_java_junit5_test", "wpilib_java_library")
load("//shared/bazel/rules:packaging.bzl", "zip_java_srcs")

wpilib_java_library(
    name = "epilogue-java",
    srcs = glob(["src/main/java/**/*.java"]),
    maven_artifact_name = "epilogue-runtime-java",
    maven_group_id = "edu.wpi.first.epilogue",
    visibility = ["//visibility:public"],
    deps = [
        "//datalog:datalog-java",
        "//ntcore:ntcore-java",
        "//wpiunits:wpiunits-java",
        "//wpiutil:wpiutil-java",
    ],
)

zip_java_srcs(name = "epilogue-runtime")

wpilib_java_junit5_test(
    name = "epilogue-test",
    srcs = glob(["src/test/java/**/*.java"]),
    deps = [
        ":epilogue-java",
        "//wpiutil:wpiutil-java",
    ],
)
