load("//shared/bazel/rules:java_rules.bzl", "wpilib_java_junit5_test", "wpilib_java_library")

wpilib_java_library(
    name = "epilogue-java",
    srcs = glob(["src/main/java/**/*.java"]),
    maven_artifact_name = "epilogue-runtime-java",
    maven_group_id = "org.wpilib.epilogue",
    visibility = ["//visibility:public"],
    deps = [
        "//datalog:datalog-java",
        "//ntcore:ntcore-java",
        "//wpiunits:wpiunits-java",
        "//wpiutil:wpiutil-java",
        "@maven//:us_hebi_quickbuf_quickbuf_runtime",
    ],
)

wpilib_java_junit5_test(
    name = "java-test",
    srcs = glob(["src/test/java/**/*.java"]),
    deps = [
        ":epilogue-java",
        "//wpimath:wpimath-java",
        "//wpiutil:wpiutil-java",
        "@maven//:us_hebi_quickbuf_quickbuf_runtime",
    ],
)
