load("@rules_java//java:defs.bzl", "java_library")
load("//shared/bazel/rules:cc_rules.bzl", "wpilib_cc_library")
load("//shared/bazel/rules:java_rules.bzl", "wpilib_java_junit5_test")
load("//shared/bazel/rules/gen:gen-resources.bzl", "generate_resources")
load("//shared/bazel/rules/publishing:publishing.bzl", "bundle_library_artifacts")

generate_resources(
    name = "generate-resources",
    namespace = "fields",
    prefix = "FIELDS",
    resource_files = glob(["src/main/native/resources/**"]),
    visibility = ["//visibility:public"],
)

wpilib_cc_library(
    name = "fieldImages",
    srcs = [":generate-resources"] + glob(["src/main/native/cpp/**"]),
    hdrs = glob(["src/main/native/include/**/*"]),
    include_license_files = True,
    strip_include_prefix = "src/main/native/include",
    visibility = ["//visibility:public"],
)

java_library(
    name = "fieldImages-java",
    srcs = glob(["src/main/java/**/*.java"]),
    resource_strip_prefix = "fieldImages/src/main/native/resources",
    resources = glob(["src/main/native/resources/**"]),
    visibility = ["//visibility:public"],
    deps = [
        "@maven//:com_fasterxml_jackson_core_jackson_annotations",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
    ],
)

wpilib_java_junit5_test(
    name = "fieldImages-test",
    srcs = glob(["src/test/java/**/*.java"]),
    deps = [
        ":fieldImages-java",
    ],
)

bundle_library_artifacts(
    name = "publishing_bundle",
    cc_hdr_pkg = ":fieldImages-hdrs-zip",
    cc_src_pkg = ":fieldImages-srcs-zip",
    cc_static_library_pkg = ":fieldImages-zip",
    library_base_name = "fieldImages",
    maven_base = "edu.wpi.first.fieldImages",
)
